--- a/app/views/static/index.erb
+++ b/app/views/static/index.erb
@@ -11,7 +11,9 @@
 <% @list.each do |url| %>
 <tr>
 	<td><%= url.url %></td>
-	<td><a href="<%=url.url%>"><%= url.shorterned_url%></a></td>
+	<td>
+<a href="http://localhost:9393/<%= url.shorterned_url%>" ><%= url.shorterned_url%></a></td>
+	<td><%= url.click_count %></td>
 	<br>
 </tr>
 <% end %>
