--- a/app/views/static/index.erb
+++ b/app/views/static/index.erb
@@ -1,21 +1,29 @@
 <!-- <h1>Hello World</h1>
 <p>See Me in views/static/index.html.erb</p> -->
 <form action="/urls" method = post>
-	Enter URL:
+	<span id = "id"> Enter URL: </span>
 	<input type = "text" name="long_url">
-	<input type ="submit" value"Submit">
+	<input type ="submit" value"Submit" class = "button">
 </form>
 
-<table>
-	
-<% @list.each do |url| %>
-<tr>
-	<td><%= url.url %></td>
-	<td>
-<a href="http://localhost:9393/<%= url.shorterned_url%>" ><%= url.shorterned_url%></a></td>
-	<td><%= url.click_count %></td>
-	<br>
-</tr>
-<% end %>
 
-</table>
+	<table class="center">
+		<thead>
+			<tr>
+				<th>Long URL</th>
+				<th>Short URL</th>
+				<th>Clicks counter</th>
+			</tr>
+		</thead>
+	<tr>
+	<% @list.each do |url| %>
+	<tr>
+		<td><%= url.url %></td>
+		<td>
+	<a href="http://localhost:9393/<%= url.shorterned_url%>" ><%= url.shorterned_url%></a></td>
+		<td><%= url.click_count %></td>
+		<br>
+	</tr>
+	<% end %>
+	</table>
+
