--- a/app/views/static/index.erb
+++ b/app/views/static/index.erb
@@ -7,9 +7,9 @@
 </form>
 
 
-	<table class="center">
+	<table class="component">
 		<thead>
-			<tr>
+			<tr class="filler">
 				<th>Long URL</th>
 				<th>Short URL</th>
 				<th>Clicks counter</th>
