--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -2,6 +2,10 @@
 <html>
 	<head>
 		<link type="text/css" rel="stylesheet" href="/css/application.css"/>
+		<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+		<script type ="text/javascript" src="/js/application.js"></script>
 		<title>Bitly Clone</title>
 	</head>
 </html>
